--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "init": "^0.1.2"
+    "init": "^0.1.2",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1"
   },
   "scripts": {
     "dev": "nodemon index.js"
