--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "apperror": "^1.3.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "init": "^0.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "dev": "nodemon index.js"
